platform-services/npm-mirror/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: npm-mirror
  labels:
    platform.capstone/component: platform
